--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: proxy101.dev
+title: proxy101
 email: xinzhang.hello@gmail.com
 domain: xinzhang-hello.github.io
 description: >- # this means to ignore newlines until "baseurl:"
