optimized code and remove default pages

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,9 +22,7 @@ title: proxy101
 email: xinzhang.hello@gmail.com
 domain: xinzhang-hello.github.io
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is a page I used to share some proxy settings.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://xizhang-hello.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
